4_service.yml
apiVersion: v1
kind: Service
metadata:
  name: extreme-echo
  namespace: thehouse
spec:
  ports:
  - port: 7000
    targetPort: 80
  selector:
    app: extreme-echo
